; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_core.c_nvme_delete_ctrl_sync.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_core.c_nvme_delete_ctrl_sync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_ctrl = type { i32 }

@NVME_CTRL_DELETING = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvme_ctrl*)* @nvme_delete_ctrl_sync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvme_delete_ctrl_sync(%struct.nvme_ctrl* %0) #0 {
  %2 = alloca %struct.nvme_ctrl*, align 8
  %3 = alloca i32, align 4
  store %struct.nvme_ctrl* %0, %struct.nvme_ctrl** %2, align 8
  store i32 0, i32* %3, align 4
  %4 = load %struct.nvme_ctrl*, %struct.nvme_ctrl** %2, align 8
  %5 = call i32 @nvme_get_ctrl(%struct.nvme_ctrl* %4)
  %6 = load %struct.nvme_ctrl*, %struct.nvme_ctrl** %2, align 8
  %7 = load i32, i32* @NVME_CTRL_DELETING, align 4
  %8 = call i32 @nvme_change_ctrl_state(%struct.nvme_ctrl* %6, i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @EBUSY, align 4
  %12 = sub nsw i32 0, %11
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %10, %1
  %14 = load i32, i32* %3, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %13
  %17 = load %struct.nvme_ctrl*, %struct.nvme_ctrl** %2, align 8
  %18 = call i32 @nvme_do_delete_ctrl(%struct.nvme_ctrl* %17)
  br label %19

19:                                               ; preds = %16, %13
  %20 = load %struct.nvme_ctrl*, %struct.nvme_ctrl** %2, align 8
  %21 = call i32 @nvme_put_ctrl(%struct.nvme_ctrl* %20)
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @nvme_get_ctrl(%struct.nvme_ctrl*) #1

declare dso_local i32 @nvme_change_ctrl_state(%struct.nvme_ctrl*, i32) #1

declare dso_local i32 @nvme_do_delete_ctrl(%struct.nvme_ctrl*) #1

declare dso_local i32 @nvme_put_ctrl(%struct.nvme_ctrl*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
